[tool.poetry]
name = "pychaosvm"
version = "0.2.3"
description = "A Python envirionment for Tencent ChaosVM."
authors = ["aioqzone <zzzzss990315@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "chaosvm", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
pyjsparser = "^2.7.1"
typing-extensions = "^4.5.0"
lxml = "^4.9.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"
isort = "*"
types-lxml = "^2023.3.28"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# customize begin
[tool.pytest.ini_options]
pythonpath = 'src'
# log_cli = 1
# log_cli_level = 'WARNING'

[tool.isort]
profile = "black"
line_length = 99

[tool.black]
line-length = 99
target-version = ['py38']

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
